# comparator

./: .gitignore  AGENTS.md  README.md  file_compare_tc.spec  pyproject.toml
docs/: GIT_WORKFLOW.md  NEXT_SESSION.md  PLAN-file-compare.md  TOTAL_COMMANDER.md  USER_GUIDE.md
file_compare/: __init__.py
file_compare/cli/: __init__.py  main.py
file_compare/core/: __init__.py  comparator.py  content_diff.py  criteria.py  models.py  scanner.py  session.py
file_compare/gui/: __init__.py  content_compare_view.py  criteria_panel.py  dir_selector.py  localization.py  main_window.py  results_view.py
scripts/: build_exe.ps1
tests/: conftest.py  test_cli.py  test_comparator.py  test_content_diff.py  test_criteria.py  test_gui_smoke.py  test_models.py  test_results_view.py  test_scanner.py  test_session.py
