[project]
name = "file-compare"
version = "0.1.0"
description = "Directory comparison utility (similar to Total Commander's Synchronize Dirs)"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "PyInstaller>=6.0",
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
file-compare = "file_compare.gui.main_window:main"
file-compare-cli = "file_compare.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["file_compare"]
